--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -13,6 +13,7 @@ body {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+  background: transparent;
 }
 
 #canvas-container {
@@ -22,6 +23,19 @@ body {
   width: 100%;
   height: 100%;
   z-index: 1;
+}
+
+#input-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.25;
+  z-index: 0;
+  pointer-events: none;
+  filter: blur(0px);
 }
 
 #ui-container {
